--- a/PatientControl.Web.Tests/packages.config
+++ b/PatientControl.Web.Tests/packages.config
@@ -3,4 +3,5 @@
   <package id="AutoMapper" version="3.1.1" targetFramework="net45" />
   <package id="Machine.Specifications" version="0.6.1" targetFramework="net45" />
   <package id="Moq" version="4.2.1312.1622" targetFramework="net45" />
+  <package id="NBuilder" version="3.0.1.1" targetFramework="net45" />
 </packages>
