--- a/PatientControl.Web/PatientControl.Web.csproj
+++ b/PatientControl.Web/PatientControl.Web.csproj
@@ -149,6 +149,7 @@
     <Compile Include="App_Start\AttributeRoutingConfig.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="ConfigureAutoMapper.cs" />
+    <Compile Include="ConfigureDatabase.cs" />
     <Compile Include="ConfigureDependencies.cs" />
     <Compile Include="ConfigureThisApplication.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -169,7 +170,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Global.asax" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -188,7 +191,9 @@
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="connectionStrings.config" />
+    <Content Include="connectionStrings.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\PatientControl.Domain.csproj">
