--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\PatientControl.Data\packages.config" />
+  <repository path="..\PatientControl.DatabaseDeployer\packages.config" />
   <repository path="..\PatientControl.Web.Tests\packages.config" />
   <repository path="..\PatientControl.Web\packages.config" />
 </repositories>
